--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="biitworx.games.race.riddle.riddlerace" >
+    package="biitworx.games.race.riddle.riddlerace">
+    <!--<uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus"/>-->
 
     <application
         android:allowBackup="true"
+        android:configChanges="orientation|keyboardHidden|screenSize"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".MainView" >
+        android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity
+            android:name=".MainView"
+
+            android:screenOrientation="portrait" />
+        <activity android:name=".levels.basic.Level_1"             android:screenOrientation="portrait" />
+        <activity android:name=".LevelChooser"             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".levels.basic.Level_2"             android:screenOrientation="portrait" />
+        <activity android:name=".levels.basic.Level_3"            android:screenOrientation="portrait" ></activity>
+
+
     </application>
 
 </manifest>
