--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".levels.basic.LevelPlay"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".LevelChooser"
+            android:name=".MainMenu"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".LevelChooser"
+            android:screenOrientation="portrait" />
+        <activity android:name=".LevelEditor" android:screenOrientation="portrait" ></activity>
     </application>
 
 </manifest>
